# td3

./: README.rst
01_cuat/tp_01_01/: Makefile
01_cuat/tp_01_01/src/: main.s  memcopy.s
01_cuat/tp_01_01/sup/: linker_script.ld
01_cuat/tp_01_02/: Makefile
01_cuat/tp_01_02/inc/: op_modes.s
01_cuat/tp_01_02/src/: main.s
01_cuat/tp_01_02/sup/: debug.gdb  linker_script.ld
01_cuat/tp_01_03/: Makefile
01_cuat/tp_01_03/inc/: interrupt.h  main.h
01_cuat/tp_01_03/src/: boot.s  interrupt.c  main.c  timer_irq_asm.s
01_cuat/tp_01_03/sup/: debug.gdb  linker_script.ld
01_cuat/tp_01_04/: Makefile
01_cuat/tp_01_04/inc/: interrupt.h  main.h
01_cuat/tp_01_04/src/: boot.s  interrupt.c
01_cuat/tp_01_04/sup/: debug.gdb  linker_script.ld
01_cuat/tp_01_04_bis/inc/: interrupt.h
01_cuat/tp_01_04_bis/src/: boot.s  interrupt.c  timer_irq_asm.s
01_cuat/tp_01_04_bis/sup/: debug.gdb
01_cuat/tp_01_05/: Makefile  README.md  linker_script.ld
01_cuat/tp_01_05/inc/: config.h  syscalls.h  syscalls_macros.S
01_cuat/tp_01_05/sup/: debug.gdb  debug_testing.gdb
01_cuat/tp_01_06/: Makefile  README.md  linker_script.ld
01_cuat/tp_01_06/inc/: config.h  syscalls.h  types.h
01_cuat/tp_01_06/sup/: Doxyfile  debug.gdb  debug_testing.gdb
02_cuat/: README.md  install.sh
02_cuat/driver/src/: cotti_i2c.c
02_cuat/images/: driver_i2c.sal
02_cuat/scripts/: menu_options.sh
02_cuat/server/: .gitignore  CMakeLists.txt  Makefile  config.cfg
02_cuat/server/include/: http_types.h  httpserver.h  main.h  temp_sensor.h
02_cuat/server/lib_include/: msg_queue.h  mutex.h  sem.h  server.h  shared_memory.h  sig.h  socket.h  thread.h  tools.h
02_cuat/server/lib_src/: CMakeLists.txt  mutex.cpp  sem.cpp  server.cpp  signal.cpp  socket.cpp  thread.cpp
02_cuat/server/src/: CMakeLists.txt  http_types.cpp  httpserver.cpp  main.cpp  temp_sensor.cpp
02_cuat/server/test/: CMakeLists.txt  test_msg_queue.cpp  test_sem.cpp  test_server.cpp  test_shared_mem.cpp  test_signal.cpp  test_thread.cpp
02_cuat/server/test/inc/: test_server.h
02_cuat/server/web/: index.html
02_cuat/server/web/errors/: bad_request.html  max_clients.html  not_found.html
(+105 files in other folders)
